<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/black"
                android:theme="@style/ToolbarStyle"/>

            <Button
                android:id="@+id/imageRedirectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/openInBrowser"
                android:backgroundTint="@color/nasa_blue"/>

            <Button
                android:id="@+id/saveFavouriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/imageRedirectButton"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:layout_marginTop="20dp"
                android:text="@string/save"
                android:backgroundTint="@color/nasa_blue"/>

            <TextView
                android:id="@+id/itemDateHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageRedirectButton"
                android:layout_marginTop="20dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nasaItemDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/itemDateHeader"
                android:text=""
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/itemTitleHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/nasaItemDate"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nasaItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/itemTitleHeader"
                android:text=""
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/itemExplanationHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/nasaItemTitle"
                android:layout_marginTop="10dp"
                android:text="@string/explanation"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nasaItemExplanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/itemExplanationHeader"
                android:text=""
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/itemImageUrlHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/nasaItemExplanation"
                android:layout_marginTop="10dp"
                android:text="@string/imageURL"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nasaItemImageURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/itemImageUrlHeader"
                android:text=""
                android:textColor="@color/white"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"
        android:background="@color/space_grey"
        app:itemTextColor="@color/white"
        app:itemIconTint="#939393"/>

</androidx.drawerlayout.widget.DrawerLayout>