<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/title_background" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:theme="@style/ToolbarStyle" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/nasa_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/titleText" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            android:text="@string/mainTitle"
            android:textSize="24dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/nameInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintLeft_toLeftOf="@id/titleText"
            android:text="@string/enterName"
            android:textSize="16dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/nameInputEdit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/nameInputText"
            app:layout_constraintLeft_toLeftOf="@id/titleText"
            android:hint="@string/typeHere"
            android:background="@drawable/rounded_border"/>

        <TextView
            android:id="@+id/bodyInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/nameInputEdit"
            app:layout_constraintLeft_toLeftOf="@id/titleText"
            android:text="@string/enterBody"
            android:textSize="16dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/bodyInputEdit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/bodyInputText"
            app:layout_constraintLeft_toLeftOf="@id/titleText"
            android:hint="@string/typeHere"
            android:background="@drawable/rounded_border"/>

        <Button
            android:id="@+id/titleButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/bodyInputEdit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/go"
            android:textSize="20dp"
            android:backgroundTint="@color/nasa_blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"
        android:background="@color/space_grey"
        app:itemTextColor="@color/white"
        app:itemIconTint="#939393"/>

</androidx.drawerlayout.widget.DrawerLayout>